# NSRA2

./: .gitignore  .gitmodules  LICENSE  README.md  build_all.sh  clion_paths.txt  control_build.sh  local_run.sh  management_build.sh  nssc_build.sh  pull_submodules.sh  run_unison.sh  viewer_build.sh
robot_ws/src/camera_ingest/: CMakeLists.txt  clion_setup.sh  package.xml
robot_ws/src/camera_ingest/include/application/api/: nssc.h
robot_ws/src/camera_ingest/include/application/cli/: cli.h
robot_ws/src/camera_ingest/include/application/errors/: nssc_errors.h
robot_ws/src/camera_ingest/include/application/message_handler/: message_handler.h
robot_ws/src/camera_ingest/include/application/task_executor/: executor.h
robot_ws/src/camera_ingest/include/calib_cameras/calibration/: calibration.h
robot_ws/src/camera_ingest/include/calib_cameras/ingest/: ingest.h  ingest_api.h
robot_ws/src/camera_ingest/include/calib_cameras/rapidxml-1.13/: rapidxml_print.hpp
robot_ws/src/camera_ingest/include/calibration/: calibration.h
robot_ws/src/camera_ingest/include/camera/: camera.h
robot_ws/src/camera_ingest/include/camera_api/camera/: camera.h
robot_ws/src/camera_ingest/include/camera_api/camera_manager/: camera_manager.h
robot_ws/src/camera_ingest/include/camera_api/frame/: mono_frame.h  stereo_frame.h
robot_ws/src/camera_ingest/include/camera_manager/: camera_manager.h
robot_ws/src/camera_ingest/include/errors/: nssc_errors.h
robot_ws/src/camera_ingest/include/frame/: mono_frame.h  stereo_frame.h
robot_ws/src/camera_ingest/include/frame/frame_struct/: frame_struct.h
robot_ws/src/camera_ingest/include/image_transport/: image_transport.h
robot_ws/src/camera_ingest/include/ingest/: ingest.h
robot_ws/src/camera_ingest/include/ndi/: ndi.h
robot_ws/src/camera_ingest/include/obj_calc/: msg_publisher.h  object_detection.h
robot_ws/src/camera_ingest/include/obj_calc/triangulation/: triangulation.h  triangulation_interface.h
robot_ws/src/camera_ingest/include/task_executor/: executor.h
robot_ws/src/camera_ingest/include/task_executor/cli/: cli.h
robot_ws/src/camera_ingest/include/viewer_api/frame_manager/: frame_manager.h
robot_ws/src/camera_ingest/include/viewer_api/ndi/: ndi.h
robot_ws/src/camera_ingest/msg/: CameraSettings.msg  ColorFilterParams.msg  ObjectDetection.msg
robot_ws/src/camera_ingest/ros_node/: CMakeLists.txt
robot_ws/src/camera_ingest/ros_node/include/: cli.h  config.h  node.h
robot_ws/src/camera_ingest/ros_node/src/: cli.cpp  node.cpp
robot_ws/src/camera_ingest/src/: main_node.cpp
robot_ws/src/camera_ingest/src/application/: main.cpp
robot_ws/src/camera_ingest/src/application/api/: nssc.cpp
robot_ws/src/camera_ingest/src/application/cli/: cli.cpp
robot_ws/src/camera_ingest/src/application/errors/: nssc_errors.cpp
robot_ws/src/camera_ingest/src/application/message_handler/: message_handler.cpp
robot_ws/src/camera_ingest/src/application/task_executor/: calibration_api.cpp  executor.cpp  ingest_api.cpp  process_api.cpp  send_api.cpp
robot_ws/src/camera_ingest/src/calib_cameras/ingest/: ingest.cpp
robot_ws/src/camera_ingest/src/calibration/: calibration.cpp  intrinsic_calib.cpp  prepare_data.cpp  stereo_calib.cpp
robot_ws/src/camera_ingest/src/camera/: camera.cpp  load_camera.cpp
robot_ws/src/camera_ingest/src/camera_manager/: camera_manager.cpp
robot_ws/src/camera_ingest/src/errors/: nssc_errors.cpp
robot_ws/src/camera_ingest/src/frame/: mono_frame.cpp  stereo_frame.cpp
robot_ws/src/camera_ingest/src/image_transport/: image_transport.cpp
robot_ws/src/camera_ingest/src/ingest/: ingest.cpp
robot_ws/src/camera_ingest/src/ndi/: ndi.cpp
robot_ws/src/camera_ingest/src/obj_calc/: msg_publisher.cpp  object_detection.cpp
robot_ws/src/camera_ingest/src/task_executor/: executor.cpp
robot_ws/src/robot_bringup/: CMakeLists.txt  package.xml
robot_ws/src/robot_bringup/launch/: nsra_base.launch.py  nsra_control.launch.py  nsra_moveit.launch.py  nsra_rviz.launch.py
robot_ws/src/robot_descriptions/: CMakeLists.txt  package.xml
robot_ws/src/robot_descriptions/common/msg/: Init.msg  Stop.msg  Vel.msg
robot_ws/src/robot_descriptions/nsra2/config/: controllers.yaml  fake_controllers.yaml  moveit_controllers.yaml  robot.rviz  robot_controllers.yaml  ros_controllers.yaml
robot_ws/src/robot_descriptions/nsra2/launch/: view_robot.launch.py
robot_ws/src/robot_descriptions/nsra2/meshes/: Component1_1.stl  Component2_1.stl  Component3_1.stl  Component4_1.stl  Component5_1.stl  Component6_1.stl  Component7_1.stl  Component8_1.stl  base_link.stl
robot_ws/src/robot_descriptions/nsra2/moveit/: joint_limits.yaml  kinematics.yaml  nsra.srdf  ompl_planning.yaml
robot_ws/src/robot_descriptions/nsra2/ros2_control/: nsra2_system_position.ros2_control.xacro
robot_ws/src/robot_descriptions/nsra2/urdf/: nsra2.urdf.xacro  nsra2_descriptions.urdf.xacro  nsra2_system_position.urdf.xacro
robot_ws/src/robot_emu/: CMakeLists.txt  package.xml
robot_ws/src/robot_emu/include/: node.h
robot_ws/src/robot_emu/src/: node.cpp  robot-emu.cpp
robot_ws/src/robot_hardware/: .gitignore  CMakeLists.txt  package.xml  robot_hardware.xml
robot_ws/src/robot_hardware/include/: common_hardware_interface.h
robot_ws/src/robot_hardware/include/adept_viper/: adept_viper_hardware.h
robot_ws/src/robot_hardware/include/node/: node.h
robot_ws/src/robot_hardware/include/nsra2/: nsra2_hardware.h
robot_ws/src/robot_hardware/include/robot_hardware/: robot_system_position.hpp
robot_ws/src/robot_hardware/nsra2/: CMakeLists.txt
robot_ws/src/robot_hardware/nsra2/src/: nsra2_system_position.cpp
robot_ws/src/robot_hardware/src/: common_hardware_interface.cpp  robot-emu.cpp  robot_system_position.cpp
robot_ws/src/robot_hardware/src/adept_viper/: adept_viper_hardware.cpp
robot_ws/src/robot_hardware/src/nsra2/: nsra2_hardware.cpp
robot_ws/src/robot_interface/: CMakeLists.txt  moveit2_tutorials.repos  package.xml
robot_ws/src/robot_interface/launch/: nsra_interface.launch.py
robot_ws/src/robot_interface/nsra2/src/: nsra2_interface.cpp
(+53 files in other folders)
